# luau-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: context.rs  ir.rs  lib.rs  luau.rs  main.rs  parser.rs  transformer.rs
tests/: main.rs
tests/data/: basic_function.out  empty.out  for_range_array.in  for_range_array.out  for_range_numbers.in  for_range_numbers.out  function_call_args.in  function_call_args.out  function_call_no_args.in  function_call_no_args.out  if_else_function.out  nested_if_function.in  nested_if_function.out
