[package]
name = "luau-rs"
description = "Rust to a made-up Luau AST."
license = "EUPL-1.2"
homepage = "https://github.com/glomdom/luau-rs"
repository = "https://github.com/glomdom/luau-rs"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
quote = "1.0.36"
syn = { version = "2.0.72", features = ["extra-traits", "full", "visit"] }

[dev-dependencies]
datatest = "0.8.0"
pretty_assertions = "1.4.0"
